# graphics-airbrush

./: CMakeLists-zip.txt  CMakeLists.txt  README.md
docs/images/: constant.tex  linear.tex  quadratic.tex  t.tex
src/: airbrush.cpp  airbrush.h  main_imgui.cpp
test/: CMakeLists.txt  complete_test.cpp  create_test.cpp  paint_test.cpp  tester.cpp
